[gd_scene load_steps=3 format=3 uid="uid://bep6dynt2gc3w"]

[ext_resource type="Script" path="res://codigos/zonademuerte.gd" id="1_wvmif"]
[ext_resource type="AudioStream" uid="uid://8amhsybocwcf" path="res://recusos/sounds/explosion.wav" id="2_7osv7"]

[node name="zonasemuerte" type="Area2D"]
collision_mask = 2
script = ExtResource("1_wvmif")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.443

[node name="sonido_de_muerte" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_7osv7")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
